[project]
name = "dashboard-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "optuna>=4.0.0",
    "pygwalker>=0.4.9.13",
    "streamlit>=1.39.0",
]

# uv add --dev <パッケージ名>
[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pydocstyle>=6.3.0",
    "ruff>=0.7.3",
    "sphinx>=8.1.3",
]

[tool.ruff]
# Ruffの設定をここに記述
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "PT", "RUF"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
